--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,19 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+          .demo0 {
+          border-radius: 4px;
+          background-color: rgb(240, 240, 232);
+          position: relative;
+          margin: 5px 3px 10px;
+          width: 250px;
+          height: 50px;
+        }
+        .demo0-block {
+          position: absolute;
+          width: 50px;
+          height: 50px;
+          border-radius: 4px;
+          background-color: rgb(130, 181, 198);
+        }
