--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@
   font-size: large;
 }
 
+.App-backTop{
+  bottom:10px;
+  right:10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
@@ -33,14 +38,14 @@
           border-radius: 4px;
           background-color: rgb(240, 240, 232);
           position: relative;
-          margin: 5px 3px 10px;
+          margin: 5px auto;
           width: 250px;
-          height: 50px;
+          height: 25px;
         }
         .demo0-block {
           position: absolute;
           width: 50px;
-          height: 50px;
+          height: 25px;
           border-radius: 4px;
           background-color: rgb(130, 181, 198);
         }
