--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,6 @@
 @import "../node_modules/antd/dist/antd.less";   // import official less entry file
 @import "theme.less";   // override variables here
+@import "muscle-css.less";
 
 .App {
   text-align: center;
@@ -20,7 +21,7 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
+  // padding: 20px;
   color: white;
 }
 
